# Lazy_Robot_Control_by_Relaxation_of_Motion_and_Force_Constraints

./: .gitignore  ABAGs_authors_implementation.c  Frame_and_Twist_testing.ipynb  README.md  YouBotModel_Sven.cpp  bias_signal.txt  bias_signal_2.txt  codding_notes  gain_signal.txt  integrator_python_testing.ipynb  kinova_3_torque_example.cpp  solver_vereshchagin_original.cpp  solver_vereshchagin_original.hpp  sven_KDL_vereshchagin.cpp  sven_youbot_node.cpp
ABAG_testing/: ABAG.ipynb  MPC-ABAG.ipynb  main  main.c  main_Sven  main_Sven.c
Controller/: CMakeLists.txt  integrator_python_testing.ipynb
Controller/include/: abag.hpp  chainfdsolver.hpp  command_specification.hpp  constants.hpp  controller_constants.hpp  dynamic_parameter_solver.hpp  dynamics_controller.hpp  external_wrench_estimator.hpp  fd_solver_rne.hpp  finite_state_machine.hpp  fk_vereshchagin.hpp  friction_observer.hpp  geometry_utils.hpp  kdl_eigen_conversions.hpp  kinova_mediator.hpp  ldl_solver_eigen.hpp  lwr_kdl_model.hpp  lwr_mediator.hpp  model_prediction.hpp  motion_profile.hpp  moving_slope.hpp  moving_variance.hpp  robot_mediator.hpp  safety_controller.hpp  safety_monitor.hpp  solver_recursive_newton_euler.hpp  solver_vereshchagin.hpp  state_specification.hpp  task_specification.hpp  youbot_constants.hpp  youbot_custom_model.hpp  youbot_mediator.hpp
Controller/src/: abag.cpp  constants.cpp  dynamic_parameter_solver.cpp  dynamics_controller.cpp  external_wrench_estimator.cpp  fd_solver_rne.cpp  finite_state_machine.cpp  fk_vereshchagin.cpp  friction_observer.cpp  geometry_utils.cpp  kdl_eigen_conversions.cpp  kinova_control_example.cpp  kinova_mediator.cpp  ldl_solver_eigen.cpp  lwr_kdl_model.cpp  lwr_mediator.cpp  main.cpp  main_dual_kinova.cpp  main_kinova.cpp  main_kinova1-2.cpp  main_kinova1-3.cpp  main_kinova17.cpp  main_lwr.cpp  main_youbot.cpp  model_prediction.cpp  motion_profile.cpp  moving_slope.cpp  moving_variance.cpp  safety_controller.cpp  safety_monitor.cpp  solver_recursive_newton_euler.cpp  solver_vereshchagin.cpp  youbot_custom_model.cpp  youbot_mediator.cpp
Controller/urdf/: kinova-gen3_urdf_V12.urdf  kinova-gen3_urdf_V12_sim.urdf  kinova-gen3_urdf_V12_with_polishing_tool.urdf  lwr.urdf  lwr_full.urdf  lwr_with_ati.urdf  weight.urdf.xacro  youbot-ver-azamat.urdf  youbot.urdf  youbot_arm_only.urdf  youbot_arm_zero_inertia.urdf  youbot_arm_zero_inertia_new_mass.urdf
Controller/visualization/: compensation_data.txt  control_error.txt  current_twist.txt  joint_torques.txt  measured_pose.txt  null_space_error.txt  plot_control_data.py  plot_data.py  plot_poses.py  predicted_pose.txt
Controller/visualization/code/: plot_abag_signals.py  plot_cart_control.py  plot_compensation_data.py  plot_control_base_data.py  plot_control_data.py  plot_control_data_2.py  plot_ext_force.py  plot_ext_force_2.py  plot_full_body_friction.py  plot_joint_data.py  plot_joint_data_2.py  plot_joint_data_3.py  plot_null_space_data.py  plot_poses.py  plot_prediction_effects.py  plot_single_joint_control_data.py  plot_stop_motion_data.py  plot_total_torque_joint_data.py  plot_tranformed_control_data.py
Main_Code/: CMakeLists.txt
Main_Code/include/: dynamics_controller.hpp  motion_specification.hpp  solver_vereshchagin.hpp
Main_Code/src/: dynamics_controller.cpp  mcr_hybrid_dynamics_solver-example_code.cpp  solver_vereshchagin.cpp
graphs/: ABAG_decision_maps.drawio  ABAG_graph.drawio  control_Graph.xml  data_flow.xml  data_flow_graph.xml  tube_control_graph.xml  tube_force_control_graph.xml
lwr_rtt_ws/.catkin_tools/profiles/default/: build.yaml  config.yaml
lwr_rtt_ws/devel/: _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
lwr_rtt_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  setup.sh
lwr_rtt_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
lwr_rtt_ws/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
lwr_rtt_ws/devel/.private/lwr_control/: .catkin  .rosinstall  setup.sh
lwr_rtt_ws/devel/.private/lwr_control/lib/pkgconfig/: lwr_control-gnulinux.pc  lwr_control.pc
lwr_rtt_ws/devel/.private/lwr_control/share/lwr_control/cmake/: lwr_controlConfig.cmake
lwr_rtt_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  lwr_control-gnulinux.pc  lwr_control.pc
lwr_rtt_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
lwr_rtt_ws/devel/share/lwr_control/cmake/: lwr_controlConfig-version.cmake  lwr_controlConfig.cmake
lwr_rtt_ws/logs/lwr_control/: build.make.000.log.stderr
lwr_rtt_ws/src/lwr_control/: CMakeLists.txt  README.md
lwr_rtt_ws/src/lwr_control/include/lwr_control/: lwr_control.hpp
lwr_rtt_ws/src/lwr_control/launch/: run.launch
lwr_rtt_ws/src/lwr_control/scripts/: run.ops
lwr_rtt_ws/src/lwr_control/src/: lwr_control.cpp
lwr_rtt_ws/src/lwr_rtt_control/: CMakeLists.txt  README.md  lwr_rtt_sim.rviz  package.xml
lwr_rtt_ws/src/lwr_rtt_control/include/lwr_rtt_control/: lwr_rtt_control.hpp
lwr_rtt_ws/src/lwr_rtt_control/launch/: run.launch  run_acc.launch  run_acc_object_estimation.launch  run_acc_transformed.launch  run_control.launch  run_force.launch  run_force_object_estimation.launch  run_sim.launch  run_tube_acc.launch  run_tube_acc_force.launch  run_tube_acc_object_estimation.launch  run_tube_force.launch  run_tube_force_object_estimation.launch  run_tube_path_acc.launch  run_tube_path_acc_force.launch
lwr_rtt_ws/src/lwr_rtt_control/scripts/: run.ops  run_control.ops  run_sim.ops
lwr_rtt_ws/src/lwr_rtt_control/src/: lwr_rtt_control.cpp
rtt-exercises-1.6.1/controller-1-solution/deployment/: application.cpf
